src/styles/pdf-text-layer.css
.textLayer {
  position: absolute;
  text-align: initial;
  inset: 0;
  overflow: hidden;
  line-height: 1;
  text-size-adjust: none;
  forced-color-adjust: none;
  transform-origin: 0 0;
  transform: scale(var(--ff-smooth-scale, 1));
  --scale-round-x: 2px;
  --scale-round-y: 2px;
  --total-scale-factor: calc(var(--scale-factor) * var(--user-unit));
  mix-blend-mode: multiply;
}

.textLayer[data-main-rotation="90"] {
  transform: scale(var(--ff-smooth-scale, 1)) rotate(90deg) translateY(-100%);
}
.textLayer[data-main-rotation="180"] {
  transform: scale(var(--ff-smooth-scale, 1)) rotate(180deg)
    translate(-100%, -100%);
}
.textLayer[data-main-rotation="270"] {
  transform: scale(var(--ff-smooth-scale, 1)) rotate(270deg) translateX(-100%);
}

.textLayer :is(span, br) {
  color: transparent;
  position: absolute;
  white-space: pre;
  cursor: text;
  margin: 0;
  transform-origin: 0 0;
}

.textLayer.selecting :is(span, br) {
  /* Solve text selection flickering issue https://github.com/mozilla/pdf.js/issues/9168#issuecomment-1952529240 */
  min-height: calc(80px * var(--total-scale-factor));
}

.textLayer br::selection {
  background: transparent;
}

.textLayer.highlighting {
  --text-selection-bg: color-mix(
    in srgb,
    var(--highlight-color) calc(var(--highlight-opacity) * 100%),
    white
  );
}

.textLayer.textLayer-rendering {
  visibility: hidden;
  pointer-events: none;
}

.textLayer span::selection {
  background: var(
    --text-selection-bg,
    color-mix(in srgb, var(--color-blue-500, #3b82f6) 30%, white)
  );
  color: transparent;
}

/* Only necessary in Google Chrome, see issue 14205, and most unfortunately
 * the problem doesn't show up in "text" reference tests. */
.textLayer span.markedContent {
  top: 0;
  height: 0;
}

.textLayer .endOfContent {
  display: block;
  position: absolute;
  inset: 100% 0 0;
  z-index: -1;
  cursor: default;
  user-select: none;
}

.textLayer.selecting .endOfContent {
  top: 0;
}

.textLayer[data-ff-text-selecting="1"] .scheme-light,
.textLayer[data-ff-text-selecting="1"] .scheme-light * {
  pointer-events: none !important;
}

.textLayer.textLayer-debug {
  mix-blend-mode: normal;
}

.textLayer.textLayer-debug span {
  color: red;
}

.hiddenCanvasElement {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  display: none;
}

